Carousel image stretch bug fix.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -295,10 +295,6 @@ input[type=submit] {
 
 .carousel .item {
     width: 100%;
-    height: 400px;
-}
-
-.carousel .item {
     max-width: 800px;
     height: 400px;
 }
